--- a/index.html
+++ b/index.html
@@ -1,11 +1,59 @@
 <!DOCTYPE html>
 <html lang="en">
+    <script>
+        window.alert("Hello, world!");
+        window.alert("Hello, world!2");
+    </script>
 <head>
+    <style>
+        div {
+  background-color: lightblue;
+}
+
+        
+        h1{background-color: blue;}
+        li{color: rgb(26, 69, 243);
+            font-size: 2rem;
+            text-shadow: 4px 4px 4px blue;
+        }
+        img{display:block;
+            padding-bottom: 2ex;    
+        }
+        .person {color:aquamarine}
+        .dsds{color:brown}
+    </style>
+
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>First Project</title>
 </head>
 <body>
-    Hello World
+    
+    <h1 class = "font-family">Poze</h1>
+    <h2>2023</h2>
+    <p>Aici vor fi poze</p>
+    <img src="https://picsum.photos/350/300">
+    <ul> 
+        <li class = "person">Bread</li>
+        <li>Eggs</li>
+        <li>blablabla</li>
+    </ul>
+    <table>
+        <thead>
+            <th class="dsds">Name</th>
+            <th>Age</th>
+        </thead>
+        <tbody>
+            <tr>
+                <td></td>
+                <td>23</td>
+            </tr>
+            <tr>
+                <td>ewewdsdsdsdsd</td>
+                <td>23</td>
+
+            </tr>
+        </tbody>
+    </table>
 </body>
 </html>
